Feature: add transactions controller and service, add dtos for transactions
