# src/main/java/com/example/bankcards/dto/TotalBalanceDto.java
@@ -1,0 +1,14 @@
+package com.example.bankcards.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class TotalBalanceDto {
+    private BigDecimal totalBalance;
+}
